force-app/main/default/objects/KCPQ_Future_Pricing__c/KCPQ_Future_Pricing__c.object-meta.xml
<CustomObject>
    <label>Future Pricing</label>
    <nameField>
        <label>Future Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Future Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>