force-app/main/default/objects/KCPQ_Future_Pricing__c/fields/KCPQ_Old_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Old_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Old Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>