force-app/main/default/objects/KCPQ_Future_Pricing__c/fields/KCPQ_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Future Pricings</relationshipLabel>
    <relationshipName>Future_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>