force-app/main/default/objects/KCPQ_Future_Pricing__c/fields/KCPQ_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Increase__c</fullName>
    <label>Price Increase</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>