force-app/main/default/objects/KCPQ_Future_Pricing__c/fields/KCPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Future Pricings</relationshipLabel>
    <relationshipName>Future_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>